# kerswell_et_al_rxnDB

./: .readthedocs.yaml  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml  release.yml
docs/: Makefile  conf.py  requirements.txt
docs/_build/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/.doctrees/autoapi/: index.doctree
rxnDB/: __init__.py  app.py  cli.py  requirements.txt  styles.css  ui.py  visualize.py
rxnDB/components/: layout.py
rxnDB/data/: loader.py  mapping.py  preprocessor.py  processor.py
rxnDB/data/cache/: rxnDB.parquet
rxnDB/data/sets/hp11/: hp11-001.yml  hp11-002.yml  hp11-003.yml  hp11-004.yml  hp11-005.yml  hp11-006.yml  hp11-007.yml  hp11-008.yml  hp11-009.yml  hp11-010.yml  hp11-011.yml  hp11-012.yml  hp11-013.yml  hp11-014.yml  hp11-015.yml  hp11-016.yml  hp11-017.yml  hp11-018.yml  hp11-019.yml  hp11-020.yml  hp11-021.yml  hp11-022.yml  hp11-023.yml  hp11-024.yml  hp11-025.yml  hp11-026.yml  hp11-027.yml  hp11-028.yml  hp11-029.yml  hp11-030.yml  hp11-031.yml  hp11-032.yml  hp11-033.yml  hp11-034.yml  hp11-035.yml  hp11-036.yml  hp11-037.yml  hp11-038.yml  hp11-039.yml  hp11-040.yml  (+485 more)
rxnDB/data/sets/jimmy/: jimmy-001.yml  jimmy-002.yml  jimmy-003.yml  jimmy-004.yml  jimmy-005.yml  jimmy-006.yml  jimmy-007.yml  jimmy-008.yml  jimmy-009.yml  jimmy-010.yml  jimmy-011.yml  jimmy-012.yml  jimmy-013.yml  jimmy-014.yml  jimmy-015.yml  jimmy-016.yml  jimmy-017.yml  jimmy-018.yml  (+85 more)
tests/: test_app.py
(+651 files in other folders)
