[metadata]
name = rxnDB
version = 0.1.0
description = A Python Shiny app for reaction database management
author = Buchanan Kerswell
author_email = buck.kerswell@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/buchanankerswell/kerswell_et_al_rxnDB

[options]
packages = find:
install_requires =
    shiny
    pandas
python_requires = >=3.10
